--- a/.asf.yaml
+++ b/.asf.yaml
@@ -70,12 +70,14 @@ github:
       required_signatures: true
       # All reviews must be addressed before merging
       required_conversation_resolution: true
-      # Require the `build` to pass before merging
+      # Require checks to pass before merging
       required_status_checks:
         checks:
           # The GitHub Actions app
           - app_id: ~
             check: "build"
+          - app_id: ~
+            check: "codeql-analysis"
       # At least one positive review must be present
       required_pull_request_reviews:
         required_approving_review_count: 1
